# grouptesting

./: .gitignore  .gitmodules  CMakeLists.txt  Publication.ipynb  Readme.md  main.cpp
include/: ConfusionMatrix.hpp  TempFile.hpp  TestDesign.hpp
tests/: CMakeLists.txt  TestConfigModel.cpp  TestConfusionMatrix.cpp
